--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "ilovecookies",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "ilovecookies.js",
-  "files": ["ilovecookies.js"],
+  "files": [
+    "ilovecookies.js"
+  ],
   "repository": "git@github.com:vielhuber/ilovecookies.git",
   "author": "David Vielhuber <david@vielhuber.de>",
   "license": "MIT"
