--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ilovecookies",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "main": "ilovecookies.js",
   "files": [
     "ilovecookies.js"
@@ -9,39 +9,40 @@
   "author": "David Vielhuber <david@vielhuber.de>",
   "license": "MIT",
   "devDependencies": {
-    "babel-plugin-array-includes": "^2.0.3",
-    "babel-polyfill": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-plugin-array-includes": "^2.0.3",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "babelify": "^8.0.0",
-    "browser-sync": "^2.24.4",
-    "browserify": "^16.2.2",
+    "browser-sync": "^2.26.7",
+    "browserify": "^16.3.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
-    "gulp-clean-css": "^3.9.4",
+    "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
-    "gulp-connect": "^5.0.0",
+    "gulp-connect": "^5.7.0",
     "gulp-htmlmin": "^4.0.0",
     "gulp-jest": "^4.0.2",
     "gulp-penthouse": "^0.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^3.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "gulp-vueify": "0.0.3",
-    "hlp": "^1.5.8",
+    "hlp": "^1.9.9",
     "ismobilejs": "^0.4.1",
-    "jest-cli": "^22.4.3",
+    "jest-cli": "^22.4.4",
+    "natives": "^1.1.6",
     "run-sequence": "^2.2.1",
     "uglify": "^0.1.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^2.0.0",
-    "vue": "^2.5.16",
+    "vue": "^2.6.10",
     "vueify-insert-css": "^1.0.0"
   }
 }
